add:courses details page

--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,51 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @font-face {
-  font-family: "Trap";
-  src: url("/fonts/trap/Trap-Light.otf") format("opentype");
+  font-family: 'Trap';
+  src: url('/fonts/trap/Trap-Light.otf') format('opentype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trap";
-  src: url("/fonts/trap/Trap-Regular.otf") format("opentype");
+  font-family: 'Trap';
+  src: url('/fonts/trap/Trap-Regular.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trap";
-  src: url("/fonts/trap/Trap-Medium.otf") format("opentype");
+  font-family: 'Trap';
+  src: url('/fonts/trap/Trap-Medium.otf') format('opentype');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trap";
-  src: url("/fonts/trap/Trap-SemiBold.otf") format("opentype");
+  font-family: 'Trap';
+  src: url('/fonts/trap/Trap-SemiBold.otf') format('opentype');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trap";
-  src: url("/fonts/trap/Trap-Bold.otf") format("opentype");
+  font-family: 'Trap';
+  src: url('/fonts/trap/Trap-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trap";
-  src: url("/fonts/trap/Trap-ExtraBold.otf") format("opentype");
+  font-family: 'Trap';
+  src: url('/fonts/trap/Trap-ExtraBold.otf') format('opentype');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trap";
-  src: url("/fonts/trap/Trap-Black.otf") format("opentype");
+  font-family: 'Trap';
+  src: url('/fonts/trap/Trap-Black.otf') format('opentype');
   font-weight: 900;
   font-style: normal;
 }
@@ -164,7 +164,19 @@
     @apply border-border outline-ring/50;
   }
   body {
-    font-family: "Trap", Arial, sans-serif;
+    font-family: 'Trap', Arial, sans-serif;
     @apply bg-background text-foreground;
   }
+}
+
+.scrollbar-custom::-webkit-scrollbar {
+  width: 0.75rem;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: #d9d9d9;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background: #305b43;
 }
