add:Courses pages

--- a/src/index.css
+++ b/src/index.css
@@ -169,6 +169,16 @@
   }
 }
 
+.scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefoxx */
+}
+
 .scrollbar-custom::-webkit-scrollbar {
   width: 0.75rem;
 }
